--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,34 @@ body {
   background-color: rgb(127, 198, 231);
 }
 
-.container {
+.search-bar {
+  display: flex;
+  gap: 3px;
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+input {
+  outline: none;
+  border: 1px solid black;
+  border-radius: 3px;
+  height: 30px;
+}
+
+button {
+  height: 34px;
+  background-color: rgb(255, 248, 238);
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+button:active {
+  box-shadow: 0 0 2px;
+}
+
+.card {
   width: 50vw;
-  height: 60vh;
+  height: 300px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -18,19 +43,19 @@ body {
   background-color: rgb(255, 248, 238);
   gap: 20%;
   border-radius: 10px;
-  box-shadow: 0 0 5px;
+  box-shadow: 0 0 4px;
 }
 
 .location {
   height: 10%;
   font-size: 2rem;
-  margin-top: 40px;
+  margin-top: 5%;
 }
 
 .weather-icon {
-  width: 70px;
+  width: 60px;
 }
 
 .temperature {
-  font-size: 3.5rem;
+  font-size: 2rem;
 }
